--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "github-theme",
+    "name": "atom-github-theme",
     "theme": "syntax",
-    "version": "0.1.0",
-    "description": "GitHub syntax theme for Atom",
-    "repository": "https://github.com/miwurster/github-theme",
+    "version": "0.0.0",
+    "description": "GitHub flavored syntax theme for Atom",
+    "repository": "https://github.com/miwurster/atom-github-theme",
     "license": "MIT",
     "engines": {
         "atom": ">0.50.0"
